# envoi-trace-code

./: AGENTS.md  README.md  models.py  offline_replay.py  orchestrate.py  pyproject.toml  runner.py  task.py  trace_format.py
agents/: __init__.py  base.py  codex.py  opencode.py
environment/tests/: wacct.py
examples/environments/c_compiler/: Dockerfile  main.py  setup.sh
examples/environments/c_compiler/tests/: __init__.py  basics.py  c_testsuite.py  torture.py  utils.py
examples/environments/c_compiler/tests/basics/control_flow/: countdown.c  if_false.c  if_true.c  while_loop.c
examples/environments/c_compiler/tests/basics/edge_cases/: if_else_chain.c  large_numbers.c  many_locals.c  nested_if.c  while_nested.c  zero_division_dividend.c
examples/environments/c_compiler/tests/basics/expressions/: all_comparisons.c  chained_comparison.c  mixed_precedence.c  nested_parens.c  parens.c  precedence.c
examples/environments/c_compiler/tests/basics/functions/: nested_calls.c  recursive.c  simple_function.c
examples/environments/c_compiler/tests/basics/smoke/: add.c  divide.c  multiply.c  print_number.c  return_0.c  return_42.c  subtract.c
examples/environments/c_compiler/tests/basics/stress/: collatz_steps.c  fibonacci.c  gcd.c  loop_with_function.c  multi_function.c  mutual_recursion.c
examples/environments/c_compiler/tests/basics/variables/: local_var.c  reassignment.c  var_arithmetic.c
examples/environments/c_compiler/tests/torture/: torture-blacklist.txt
examples/tasks/c_compiler/: en.md
sandbox/: codex_client.py  opencode_client.py
sandbox/modal/: setup.sh
scripts/: graph_trace.py  offline_replay.py  trace.py
utils/: __init__.py  evaluation.py  git.py  helpers.py  parsing.py  solve.py  storage.py  stream.py  trace_parquet.py
